--- a/Web Prac/public/style.css
+++ b/Web Prac/public/style.css
@@ -1,1 +1,8 @@
-/*Heyy*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+#signOut {
+    display: none;
+}
